--- a/Your Valult/Base.lproj/Main.storyboard
+++ b/Your Valult/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w6d-B3-0kz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-461" y="571"/>
+            <point key="canvasLocation" x="-2009" y="511"/>
         </scene>
         <!--New NotesVC-->
         <scene sceneID="Sod-fr-SQA">
@@ -208,7 +208,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="USS-KK-48e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="346" y="571"/>
+            <point key="canvasLocation" x="-1110" y="635"/>
         </scene>
         <!--Photos-->
         <scene sceneID="hAg-WR-jT3">
@@ -266,7 +266,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GiH-gI-BTr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="362" y="-157"/>
+            <point key="canvasLocation" x="-2" y="475"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ooR-pJ-4Jv">
@@ -340,7 +340,7 @@
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="101" id="zUG-J1-Qcq" customClass="InternetAccountCell" customModule="Your_Valult" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="600" height="101"/>
-                                        <autoresizingMask key="autoresizingMask"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zUG-J1-Qcq" id="kHG-CS-v29">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="100.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
@@ -400,23 +400,32 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="fmJ-xS-uSi" secondAttribute="trailing" id="BC1-4y-ir3"/>
                             <constraint firstItem="5T5-Lt-dzb" firstAttribute="top" secondItem="T6C-qF-au1" secondAttribute="top" id="Dda-Se-g2B"/>
-                            <constraint firstItem="fmJ-xS-uSi" firstAttribute="leading" secondItem="T6C-qF-au1" secondAttribute="leading" id="FhX-A7-kLM"/>
                             <constraint firstAttribute="trailing" secondItem="5T5-Lt-dzb" secondAttribute="trailing" id="LSe-3d-cje"/>
-                            <constraint firstItem="fmJ-xS-uSi" firstAttribute="top" secondItem="5T5-Lt-dzb" secondAttribute="bottom" id="SBa-sJ-Kvi"/>
+                            <constraint firstAttribute="trailing" secondItem="fmJ-xS-uSi" secondAttribute="trailing" id="QS8-dx-iY2"/>
+                            <constraint firstItem="Khj-cT-wa0" firstAttribute="top" secondItem="fmJ-xS-uSi" secondAttribute="bottom" id="YEd-XS-Lw4"/>
                             <constraint firstItem="5T5-Lt-dzb" firstAttribute="leading" secondItem="T6C-qF-au1" secondAttribute="leading" id="flD-Up-62O"/>
-                            <constraint firstItem="Khj-cT-wa0" firstAttribute="top" secondItem="fmJ-xS-uSi" secondAttribute="bottom" id="lu0-md-9bW"/>
+                            <constraint firstItem="fmJ-xS-uSi" firstAttribute="leading" secondItem="T6C-qF-au1" secondAttribute="leading" id="lDM-Rh-OPT"/>
+                            <constraint firstItem="fmJ-xS-uSi" firstAttribute="top" secondItem="5T5-Lt-dzb" secondAttribute="bottom" id="nCn-PI-S8Z"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Internet Accounts" image="bar_IA" id="FeV-D8-9Kd"/>
                     <connections>
+                        <outlet property="searchDisplayController" destination="Fgy-3V-4OB" id="13Y-JA-5Q4"/>
                         <outlet property="tableView" destination="fmJ-xS-uSi" id="Zi0-a7-iFI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tHk-H9-LYT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="Fgy-3V-4OB">
+                    <connections>
+                        <outlet property="delegate" destination="da1-wm-XRH" id="J7t-ZI-qXX"/>
+                        <outlet property="searchContentsController" destination="da1-wm-XRH" id="of8-5p-fGQ"/>
+                        <outlet property="searchResultsDataSource" destination="da1-wm-XRH" id="7ku-2u-AB2"/>
+                        <outlet property="searchResultsDelegate" destination="da1-wm-XRH" id="rNJ-5L-N4J"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="-3355" y="473"/>
+            <point key="canvasLocation" x="-3244" y="347"/>
         </scene>
         <!--Entry Internet AccountVC-->
         <scene sceneID="WE3-WN-Ili">
@@ -817,13 +826,26 @@
                                             <action selector="btnSave:" destination="PGZ-8M-Bbd" eventType="touchUpInside" id="WqU-Ck-gmi"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zzC-f3-6hf">
+                                        <rect key="frame" x="498" y="21" width="40" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="Q4Y-1K-V6j"/>
+                                            <constraint firstAttribute="height" constant="30" id="jyC-aE-RWg"/>
+                                        </constraints>
+                                        <state key="normal" title="Share"/>
+                                        <connections>
+                                            <action selector="share:" destination="PGZ-8M-Bbd" eventType="touchUpInside" id="Rdt-8P-FUs"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.066666666669999999" green="0.63529411759999999" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="zzC-f3-6hf" secondAttribute="bottom" constant="9" id="DhJ-mG-ATM"/>
                                     <constraint firstAttribute="trailing" secondItem="aNe-68-jQE" secondAttribute="trailing" constant="8" id="JpS-OP-vHc"/>
                                     <constraint firstItem="Tj7-BN-Q83" firstAttribute="centerX" secondItem="KSF-Rq-Z4j" secondAttribute="centerX" id="Rm5-Pq-5kb"/>
                                     <constraint firstAttribute="height" constant="60" id="TQP-N1-lTb"/>
                                     <constraint firstAttribute="bottom" secondItem="Tj7-BN-Q83" secondAttribute="bottom" constant="8" id="Zy0-dp-nCO"/>
+                                    <constraint firstItem="aNe-68-jQE" firstAttribute="leading" secondItem="zzC-f3-6hf" secondAttribute="trailing" constant="16" id="aJe-BC-Dos"/>
                                     <constraint firstItem="4Sx-Db-aFh" firstAttribute="leading" secondItem="KSF-Rq-Z4j" secondAttribute="leading" constant="8" id="azc-yN-SaI"/>
                                     <constraint firstAttribute="bottom" secondItem="4Sx-Db-aFh" secondAttribute="bottom" constant="8" id="dhf-cB-n8y"/>
                                     <constraint firstAttribute="bottom" secondItem="aNe-68-jQE" secondAttribute="bottom" constant="8" id="rrR-2c-uWL"/>
@@ -853,7 +875,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1tg-cK-G3F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-406" y="1332"/>
+            <point key="canvasLocation" x="-1838" y="1376"/>
         </scene>
     </scenes>
     <resources>
